# cw_6

./: .gitignore  README.md  db.sqlite3  pyproject.toml
blog/: models.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_list.html
config/: settings.py  urls.py
main/: admin.py  models.py  send_mailing.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_initial.py  0003_client_client_owner.py
main/templates/main/: client.html  index.html  mailing_form.html
users/: models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/users/: user_form.html
