[tool.poetry]
name = "coursework-6"
version = "0.1.0"
description = ""
authors = ["manuilov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
pytils = "^0.4.1"
pytz = "^2023.3.post1"
pillow = "^10.1.0"
django-crontab = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
